created Portfolio page and Projects section

--- a/src/index.css
+++ b/src/index.css
@@ -62,4 +62,18 @@
   .quick-links:focus-visible::after {
     transform: scaleY(1);
   }
+
+  /* .project::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: #ff4646;
+
+    transform: translateY(-100%);
+    transition: transform 0.25s ease-in-out;
+  }
+
+  .project:hover::after {
+    transform: translateY(0);
+  } */
 }
